# zetachain-nft

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  README.md  all-discriminators.json  demo.sh  deployment-info.json  package.json  test-deployment.sh
Documentation/: ARCHITECTURE.md  COMPLETE_DEPLOYMENT_SUMMARY.md  CROSS_CHAIN_TRANSFER_TEST_COMPLETE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DISCRIMINATOR_FIX.md  FINAL_DEPLOYMENT_SUMMARY.md  FRONTEND_FIXES_APPLIED.md  FRONTEND_FIXES_SUMMARY.md  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_UPDATES_COMPLETE.md  FRONTEND_UPDATE_SUMMARY.md  NFT_TRANSFER_REQUIREMENTS.md  SESSION_SUMMARY.md  SUCCESS_SUMMARY.md  ZETACHAININFO.MD  ZETACHAIN_INTEGRATION_GUIDE.md  demo-script.md  wallet-troubleshooting.md
client/: universal-nft-client.ts
contracts/: SimpleUniversalNFT.sol  UniversalNFTContract.sol
deployments/: zetachain-testnet.json  zetachain-working-testnet.json
frontend/: next.config.js  package-lock.json  package.json  test-config.js  test-nft-mint.html
programs/universal-nft/: Cargo.toml
programs/universal-nft/src/: errors.rs  lib.rs  lib.rs.bak  state.rs
programs/universal-nft/src/instructions/: initialize.rs  mint_nft.rs  mint_nft_simple.rs  mod.rs  on_call.rs  on_revert.rs  receive_cross_chain.rs  transfer_cross_chain.rs  trigger_deposit.rs  update_gateway.rs
scripts/: calculate-pda.js  check-deployment-status.js  check-nft-transferability.js  complete-deployment.sh  debug-mint-instruction.js  debug-mint-simple.js  debug-program.js  deploy-and-test.sh  deploy-devnet.sh  (+28 more)
(+67 files in other folders)
